not important changes

--- a/test.ipynb
+++ b/test.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "    df = pd.read_csv(Path(r'C:/\\Users/\\vchar/\\OneDrive/\\Desktop/\\ML Projects/\\Upwork/\\AlgoT_ML_Dev/\\GrammarEvolution/\\PonyGE2/\\datasets/\\BTCUSD_ohlcv.csv'))\n",
     "    # df = pd.read_csv('/kaggle/input/btcusd-test/BTCUSD_ohlcv.csv')\n",
     "    df['datetime'] = pd.to_datetime(df['datetime'])\n",
-    "    df = df.iloc[-10000:]\n",
+    "    df = df.iloc[-10080:]\n",
     "    df.sort_values('datetime', ascending=True, inplace=True)\n",
     "    df.reset_index(inplace=True, drop=True)\n",
     "    return df"
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -64,63 +64,63 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2022-12-30 22:05:00</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.4</td>\n",
-       "      <td>16583.4</td>\n",
-       "      <td>4741.0</td>\n",
+       "      <td>2022-12-30 20:45:00</td>\n",
+       "      <td>16534.6</td>\n",
+       "      <td>16537.5</td>\n",
+       "      <td>16534.6</td>\n",
+       "      <td>16537.5</td>\n",
+       "      <td>36187.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2022-12-30 22:06:00</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>22.0</td>\n",
+       "      <td>2022-12-30 20:46:00</td>\n",
+       "      <td>16537.5</td>\n",
+       "      <td>16538.2</td>\n",
+       "      <td>16535.6</td>\n",
+       "      <td>16538.2</td>\n",
+       "      <td>101860.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2022-12-30 22:07:00</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.4</td>\n",
-       "      <td>16583.4</td>\n",
-       "      <td>34811.0</td>\n",
+       "      <td>2022-12-30 20:47:00</td>\n",
+       "      <td>16538.2</td>\n",
+       "      <td>16538.2</td>\n",
+       "      <td>16538.1</td>\n",
+       "      <td>16538.2</td>\n",
+       "      <td>102265.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2022-12-30 22:08:00</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>20.0</td>\n",
+       "      <td>2022-12-30 20:48:00</td>\n",
+       "      <td>16538.2</td>\n",
+       "      <td>16538.4</td>\n",
+       "      <td>16538.1</td>\n",
+       "      <td>16538.2</td>\n",
+       "      <td>71347.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>2022-12-30 22:09:00</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>16583.5</td>\n",
-       "      <td>5783.0</td>\n",
+       "      <td>2022-12-30 20:49:00</td>\n",
+       "      <td>16538.2</td>\n",
+       "      <td>16538.2</td>\n",
+       "      <td>16535.8</td>\n",
+       "      <td>16535.9</td>\n",
+       "      <td>57985.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             datetime     open     high      low    close   volume\n",
-       "0 2022-12-30 22:05:00  16583.5  16583.5  16583.4  16583.4   4741.0\n",
-       "1 2022-12-30 22:06:00  16583.5  16583.5  16583.5  16583.5     22.0\n",
-       "2 2022-12-30 22:07:00  16583.5  16583.5  16583.4  16583.4  34811.0\n",
-       "3 2022-12-30 22:08:00  16583.5  16583.5  16583.5  16583.5     20.0\n",
-       "4 2022-12-30 22:09:00  16583.5  16583.5  16583.5  16583.5   5783.0"
+       "             datetime     open     high      low    close    volume\n",
+       "0 2022-12-30 20:45:00  16534.6  16537.5  16534.6  16537.5   36187.0\n",
+       "1 2022-12-30 20:46:00  16537.5  16538.2  16535.6  16538.2  101860.0\n",
+       "2 2022-12-30 20:47:00  16538.2  16538.2  16538.1  16538.2  102265.0\n",
+       "3 2022-12-30 20:48:00  16538.2  16538.4  16538.1  16538.2   71347.0\n",
+       "4 2022-12-30 20:49:00  16538.2  16538.2  16535.8  16535.9   57985.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1684,7 +1684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1717,7 +1717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1726,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1748,8 +1748,19 @@
     "# df.signal = df.signal + df.buy\n",
     "# df.drop(columns=['buy', 'sell'], inplace=True)\n",
     "\n",
-    "df['buy'] = (9.2 <= df['open'].values.reshape(-1, 1)).astype(int)\n",
-    "df['sell'] = (df['high'].values.reshape(-1, 1) // df['open'].values.reshape(-1, 1) >= 9.833).astype(int)\n",
+    "# df['buy'] = (9.2 <= df['open'].values.reshape(-1, 1)).astype(int)\n",
+    "# df['sell'] = (df['high'].values.reshape(-1, 1) // df['open'].values.reshape(-1, 1) >= 9.833).astype(int)\n",
+    "# df['signal'] = df['buy'] + df['sell']\n",
+    "# df['signal'] = df['signal'].apply(lambda x: 1 if x==1 else 0)\n",
+    "# df['sell'] = df['sell'] * (-1)\n",
+    "# df['signal'] = df['signal'] * df['sell']\n",
+    "# df['signal'] = df['signal'] + df['buy']\n",
+    "# df.drop(columns=['buy', 'sell'], inplace=True)\n",
+    "\n",
+    "df['buy'] = (RSI(df=data, HistLength=10).values < 30).astype(int)\n",
+    "df['sell'] = (RSI(df=data, HistLength=10).values > 70).astype(int)\n",
+    "# df['buy'] = (RSI(df=data, HistLength=10).values < 20).astype(int)\n",
+    "# df['sell'] = (RSI(df=data, HistLength=10).values < 30).astype(int)\n",
     "df['signal'] = df['buy'] + df['sell']\n",
     "df['signal'] = df['signal'].apply(lambda x: 1 if x==1 else 0)\n",
     "df['sell'] = df['sell'] * (-1)\n",
@@ -1760,21 +1771,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[54], line 18\u001b[0m\n\u001b[0;32m     16\u001b[0m buy_prices \u001b[38;5;241m=\u001b[39m df[df\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39misin(buy_idxs)]\u001b[38;5;241m.\u001b[39mopen\u001b[38;5;241m.\u001b[39mvalues\n\u001b[0;32m     17\u001b[0m sell_prices \u001b[38;5;241m=\u001b[39m df[df\u001b[38;5;241m.\u001b[39mindex\u001b[38;5;241m.\u001b[39misin(sell_idxs)]\u001b[38;5;241m.\u001b[39mopen\u001b[38;5;241m.\u001b[39mvalues\n\u001b[1;32m---> 18\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m buy_idxs[\u001b[38;5;241m0\u001b[39m] \u001b[38;5;241m<\u001b[39m \u001b[43msell_idxs\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m0\u001b[39;49m\u001b[43m]\u001b[49m:\n\u001b[0;32m     19\u001b[0m     buy_pnl \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(sell_prices \u001b[38;5;241m-\u001b[39m buy_prices)\n\u001b[0;32m     20\u001b[0m     sell_pnl \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39msum(sell_prices[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m-\u001b[39m buy_prices[\u001b[38;5;241m1\u001b[39m:])\n",
-      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "buy_idxs = []\n",
     "sell_idxs = []\n",
@@ -1789,6 +1788,10 @@
     "        sell_idxs.append(i+1)\n",
     "        is_sell = 1\n",
     "        is_buy = 0\n",
+    "if len(buy_idxs) > len(sell_idxs):\n",
+    "    buy_idxs = buy_idxs[:-(len(buy_idxs) - len(sell_idxs))]\n",
+    "elif len(buy_idxs) < len(sell_idxs):\n",
+    "    sell_idxs = sell_idxs[:-(len(sell_idxs) - len(buy_idxs))]\n",
     "if len(buy_idxs) == 0 or len(sell_idxs) == 0:\n",
     "    fitness = -999\n",
     "buy_prices = df[df.index.isin(buy_idxs)].open.values\n",
@@ -1816,16 +1819,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([44.6])"
+       "array([-3.040e+01,  2.130e+01, -1.010e+01,  2.130e+01,  0.000e+00,\n",
+       "        2.130e+01,  2.000e+00,  2.130e+01,  1.700e+00,  2.130e+01,\n",
+       "       -1.240e+01,  2.130e+01,  1.590e+01,  2.130e+01, -1.780e+01,\n",
+       "        2.130e+01,  5.600e+00,  2.130e+01, -2.470e+01,  2.130e+01,\n",
+       "        1.460e+01,  2.130e+01,  5.400e+00,  2.130e+01,  1.500e+01,\n",
+       "        2.130e+01,  8.600e+00,  2.130e+01,  5.600e+00,  2.130e+01,\n",
+       "        1.230e+01,  2.130e+01,  1.350e+01,  2.130e+01,  5.700e+00,\n",
+       "        2.130e+01,  2.260e+01,  2.130e+01,  1.360e+01,  2.130e+01,\n",
+       "        2.620e+01,  2.130e+01, -7.300e+00,  2.130e+01,  6.500e+00,\n",
+       "        2.130e+01, -7.600e+00,  2.130e+01,  1.380e+01,  2.130e+01,\n",
+       "       -2.690e+01,  2.130e+01, -1.510e+01,  2.130e+01, -3.300e+00,\n",
+       "        2.130e+01,  5.800e+00,  2.130e+01, -1.890e+01,  2.130e+01,\n",
+       "       -1.180e+01,  2.130e+01, -4.100e+00,  2.130e+01,  1.240e+01,\n",
+       "        2.130e+01,  5.600e+00,  2.130e+01, -1.240e+01,  2.130e+01,\n",
+       "       -6.700e+00,  2.130e+01, -3.380e+01,  2.130e+01, -1.000e+01,\n",
+       "        2.130e+01, -6.450e+01,  2.130e+01,  2.000e+01,  2.130e+01,\n",
+       "        3.000e-01,  2.130e+01, -7.600e+00,  2.130e+01,  1.180e+01,\n",
+       "        2.130e+01, -1.450e+01,  2.130e+01,  9.300e+00,  2.130e+01,\n",
+       "        5.600e+00,  2.130e+01,  1.100e+00,  2.130e+01,  8.100e+00,\n",
+       "        2.130e+01,  8.900e+00,  2.130e+01,  6.400e+00,  2.130e+01,\n",
+       "       -2.300e+00,  2.130e+01,  2.000e-01,  2.130e+01, -6.800e+00,\n",
+       "        2.130e+01, -3.270e+01,  2.130e+01,  1.000e-01,  2.130e+01,\n",
+       "       -1.440e+01,  2.130e+01,  5.400e+00,  2.130e+01,  7.800e+00,\n",
+       "        2.130e+01,  1.190e+01,  2.130e+01,  3.110e+01,  2.130e+01,\n",
+       "        3.700e+01,  2.130e+01,  2.400e+00,  2.130e+01, -1.370e+01,\n",
+       "        2.130e+01, -3.800e+00,  2.130e+01, -1.954e+02,  2.130e+01,\n",
+       "        1.010e+01,  2.130e+01, -6.100e+00,  2.130e+01,  9.300e+00,\n",
+       "        2.130e+01,  3.570e+01,  2.130e+01,  3.500e+00,  2.130e+01,\n",
+       "        1.180e+01,  2.130e+01, -2.900e+00,  2.130e+01, -1.850e+01,\n",
+       "        2.130e+01,  2.350e+01,  2.130e+01,  1.100e+00,  2.130e+01,\n",
+       "        1.500e+00,  2.130e+01, -1.060e+01,  2.130e+01,  1.300e+01,\n",
+       "        2.130e+01,  8.700e+00,  2.130e+01, -5.500e+00,  2.130e+01,\n",
+       "        2.000e+00,  2.130e+01,  1.300e+01,  2.130e+01, -9.500e+00,\n",
+       "        2.130e+01,  8.000e-01,  2.130e+01,  1.210e+01,  2.130e+01,\n",
+       "        3.070e+01,  2.130e+01, -1.590e+01,  2.130e+01,  1.640e+01,\n",
+       "        2.130e+01, -6.600e+00,  2.130e+01, -2.100e+00,  2.130e+01,\n",
+       "        1.380e+01,  2.130e+01,  5.400e+00,  2.130e+01, -1.580e+01,\n",
+       "        2.130e+01, -1.200e+00,  2.130e+01,  1.010e+01,  2.130e+01,\n",
+       "       -6.100e+00,  2.130e+01, -7.400e+00,  2.130e+01, -2.900e+00,\n",
+       "        2.130e+01,  4.740e+01,  2.130e+01,  6.300e+01,  2.130e+01,\n",
+       "       -3.220e+01,  2.130e+01,  1.340e+01])"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1836,16 +1879,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "nan"
+       "11.523618229678396"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1856,16 +1899,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[1]"
+       "[70,\n",
+       " 204,\n",
+       " 383,\n",
+       " 525,\n",
+       " 608,\n",
+       " 695,\n",
+       " 728,\n",
+       " 885,\n",
+       " 917,\n",
+       " 1078,\n",
+       " 1123,\n",
+       " 1195,\n",
+       " 1228,\n",
+       " 1304,\n",
+       " 1340,\n",
+       " 1360,\n",
+       " 1392,\n",
+       " 1439,\n",
+       " 1534,\n",
+       " 1646,\n",
+       " 1672,\n",
+       " 1797,\n",
+       " 1884,\n",
+       " 2061,\n",
+       " 2130,\n",
+       " 2270,\n",
+       " 2428,\n",
+       " 2517,\n",
+       " 2557,\n",
+       " 2638,\n",
+       " 2765,\n",
+       " 2822,\n",
+       " 2880,\n",
+       " 2970,\n",
+       " 3092,\n",
+       " 3281,\n",
+       " 3383,\n",
+       " 3467,\n",
+       " 3557,\n",
+       " 3609,\n",
+       " 3700,\n",
+       " 3836,\n",
+       " 3941,\n",
+       " 4088,\n",
+       " 4162,\n",
+       " 4199,\n",
+       " 4240,\n",
+       " 4278,\n",
+       " 4342,\n",
+       " 4423,\n",
+       " 4568,\n",
+       " 4683,\n",
+       " 4780,\n",
+       " 4916,\n",
+       " 5005,\n",
+       " 5127,\n",
+       " 5169,\n",
+       " 5219,\n",
+       " 5284,\n",
+       " 5408,\n",
+       " 5527,\n",
+       " 5667,\n",
+       " 5850,\n",
+       " 5957,\n",
+       " 6249,\n",
+       " 6300,\n",
+       " 6410,\n",
+       " 6429,\n",
+       " 6464,\n",
+       " 6662,\n",
+       " 6801,\n",
+       " 6962,\n",
+       " 7036,\n",
+       " 7099,\n",
+       " 7292,\n",
+       " 7334,\n",
+       " 7432,\n",
+       " 7516,\n",
+       " 7581,\n",
+       " 7760,\n",
+       " 7895,\n",
+       " 7973,\n",
+       " 8075,\n",
+       " 8128,\n",
+       " 8169,\n",
+       " 8278,\n",
+       " 8352,\n",
+       " 8436,\n",
+       " 8565,\n",
+       " 8618,\n",
+       " 8677,\n",
+       " 8751,\n",
+       " 8917,\n",
+       " 9075,\n",
+       " 9220,\n",
+       " 9302,\n",
+       " 9373,\n",
+       " 9483,\n",
+       " 9695,\n",
+       " 9720,\n",
+       " 9813,\n",
+       " 9871]"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1876,16 +2020,117 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[]"
+       "[15,\n",
+       " 121,\n",
+       " 347,\n",
+       " 494,\n",
+       " 569,\n",
+       " 650,\n",
+       " 711,\n",
+       " 800,\n",
+       " 897,\n",
+       " 972,\n",
+       " 1106,\n",
+       " 1178,\n",
+       " 1206,\n",
+       " 1288,\n",
+       " 1328,\n",
+       " 1353,\n",
+       " 1371,\n",
+       " 1416,\n",
+       " 1525,\n",
+       " 1610,\n",
+       " 1663,\n",
+       " 1706,\n",
+       " 1870,\n",
+       " 1983,\n",
+       " 2100,\n",
+       " 2193,\n",
+       " 2294,\n",
+       " 2477,\n",
+       " 2551,\n",
+       " 2578,\n",
+       " 2674,\n",
+       " 2777,\n",
+       " 2860,\n",
+       " 2945,\n",
+       " 3007,\n",
+       " 3212,\n",
+       " 3289,\n",
+       " 3412,\n",
+       " 3504,\n",
+       " 3571,\n",
+       " 3682,\n",
+       " 3775,\n",
+       " 3929,\n",
+       " 3990,\n",
+       " 4126,\n",
+       " 4179,\n",
+       " 4202,\n",
+       " 4262,\n",
+       " 4303,\n",
+       " 4374,\n",
+       " 4534,\n",
+       " 4635,\n",
+       " 4719,\n",
+       " 4831,\n",
+       " 4978,\n",
+       " 5058,\n",
+       " 5161,\n",
+       " 5209,\n",
+       " 5261,\n",
+       " 5300,\n",
+       " 5474,\n",
+       " 5600,\n",
+       " 5699,\n",
+       " 5888,\n",
+       " 6020,\n",
+       " 6277,\n",
+       " 6310,\n",
+       " 6415,\n",
+       " 6446,\n",
+       " 6628,\n",
+       " 6757,\n",
+       " 6832,\n",
+       " 6997,\n",
+       " 7060,\n",
+       " 7237,\n",
+       " 7303,\n",
+       " 7358,\n",
+       " 7487,\n",
+       " 7565,\n",
+       " 7649,\n",
+       " 7868,\n",
+       " 7958,\n",
+       " 7999,\n",
+       " 8091,\n",
+       " 8149,\n",
+       " 8252,\n",
+       " 8293,\n",
+       " 8425,\n",
+       " 8496,\n",
+       " 8578,\n",
+       " 8664,\n",
+       " 8708,\n",
+       " 8857,\n",
+       " 9011,\n",
+       " 9199,\n",
+       " 9280,\n",
+       " 9321,\n",
+       " 9433,\n",
+       " 9661,\n",
+       " 9710,\n",
+       " 9738,\n",
+       " 9836]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1896,16 +2141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "44.60000000000218"
+       "202.90000000011423"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1916,16 +2161,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-999"
+       "11.523618229678396"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3010,13 +3255,6 @@
     "    index=False\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
