not important changes

--- a/test.ipynb
+++ b/test.ipynb
@@ -3258,6 +3258,127 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['indicators.RSI(df=data, HistLength=10).values < 20']"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re \n",
+    "\n",
+    "text = '''def fun(price_data):\n",
+    "  import pandas as pd\n",
+    "  import numpy as np\n",
+    "  from fitness.indicators import indicators\n",
+    "  from numba import njit\n",
+    "  @njit\n",
+    "  def merge_pnl(arr1, arr2):\n",
+    "    out = np.zeros((len(arr1) + len(arr2)))\n",
+    "    idx = 1\n",
+    "    for i in range(len(arr1) + len(arr2)):\n",
+    "      if i % 2 == 0:\n",
+    "        out[i] = arr1[int(i/2)]\n",
+    "      else:\n",
+    "        out[i] = arr2[i-idx]\n",
+    "      idx += 1\n",
+    "    return out\n",
+    "  @njit\n",
+    "  def get_drawdowns(arr):\n",
+    "    drawdowns = np.zeros((len(arr)))\n",
+    "    max = arr[0]\n",
+    "    for i in range(1, len(drawdowns)-1):\n",
+    "      if arr[i-1] > arr[i] and arr[i] < arr[i+1]:\n",
+    "        min = arr[i]\n",
+    "        drawdowns[i] = max - min\n",
+    "      elif arr[i-1] < arr[i] and arr[i] > arr[i+1]:\n",
+    "        max = arr[i]\n",
+    "    return drawdowns\n",
+    "  df = price_data.copy()\n",
+    "  df['buy'] = (indicators.RSI(df=data, HistLength=10).values < 20).astype(int)\n",
+    "  df['sell'] = (indicators.RSI(df=data, HistLength=10).values > 80).astype(int)\n",
+    "  df['signal'] = df['buy'] + df['sell']\n",
+    "  df['signal'] = df['signal'].apply(lambda x: 1 if x==1 else 0)\n",
+    "  df['sell'] = df['sell'] * (-1)\n",
+    "  df['signal'] = df['signal'] * df['sell']\n",
+    "  df['signal'] = df['signal'] + df['buy']\n",
+    "  df.drop(columns=['buy', 'sell'], inplace=True)\n",
+    "  buy_idxs = []\n",
+    "  sell_idxs = []\n",
+    "  is_buy = 0\n",
+    "  is_sell = 0\n",
+    "  for i, row in enumerate(df.itertuples()):\n",
+    "    if row.signal == 1 and is_buy == 0:\n",
+    "      buy_idxs.append(i+1)\n",
+    "      is_buy = 1\n",
+    "      is_sell = 0\n",
+    "    elif row.signal == -1 and is_sell == 0:\n",
+    "      sell_idxs.append(i+1)\n",
+    "      is_sell = 1\n",
+    "      is_buy = 0\n",
+    "  if len(buy_idxs) > len(sell_idxs):\n",
+    "    buy_idxs = buy_idxs[:-(len(buy_idxs) - len(sell_idxs))]\n",
+    "  elif len(buy_idxs) < len(sell_idxs):\n",
+    "    sell_idxs = sell_idxs[:-(len(sell_idxs) - len(buy_idxs))]\n",
+    "  if len(buy_idxs) == 0 or len(sell_idxs) == 0:\n",
+    "    return 999\n",
+    "  buy_prices = df[df.index.isin(buy_idxs)]['open'].values\n",
+    "  sell_prices = df[df.index.isin(sell_idxs)]['open'].values\n",
+    "  if buy_idxs[0] < sell_idxs[0]:\n",
+    "    buy_pnl = np.sum(sell_prices - buy_prices)\n",
+    "    sell_pnl = np.sum(sell_prices[:-1] - buy_prices[1:])\n",
+    "    buy_arr = sell_prices - buy_prices\n",
+    "    sell_arr = sell_prices[:-1] - buy_prices[1:]\n",
+    "    all_arr = merge_pnl(buy_arr, sell_arr)\n",
+    "  else:\n",
+    "    sell_pnl = np.sum(sell_prices - buy_prices)\n",
+    "    buy_pnl = np.sum(sell_prices[1:] - buy_prices[:-1])\n",
+    "    sell_arr = sell_prices - buy_prices\n",
+    "    buy_arr = sell_prices[1:] - buy_prices[:-1]\n",
+    "    all_arr = merge_pnl(sell_arr, buy_arr)\n",
+    "  total_pnl = buy_pnl + sell_pnl\n",
+    "  equity_curve_arr = np.cumsum(all_arr)\n",
+    "  drawdowns = get_drawdowns(equity_curve_arr)\n",
+    "  avg_drawdown = np.sum(drawdowns[drawdowns!=0]) / len(drawdowns[drawdowns!=0])\n",
+    "  fitness = total_pnl / avg_drawdown\n",
+    "  if np.isnan(fitness):\n",
+    "    return 999\n",
+    "  return -fitness\n",
+    "fitness = fun(data)'''\n",
+    "\n",
+    "re.findall(r\"df\\[\\'buy\\'\\] = \\((.*)\\)\\.astype\\(int\\)\", text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['indicators.RSI(df=data, HistLength=10).values > 80']"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "re.findall(r\"df\\[\\'sell\\'\\] = \\((.*)\\)\\.astype\\(int\\)\", text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
