--- a/run.ipynb
+++ b/run.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Start:\t 2024-10-01 08:15:20.621119 \n",
+      "Start:\t 2024-10-01 22:49:53.322243 \n",
       "\n",
       "Warning: Grammar contains unit production for production rule <fc>\n",
       "         Unit productions consume GE codons.\n",
@@ -31,20 +31,21 @@
       "         Unit productions consume GE codons.\n",
       "Warning: Grammar contains unit production for production rule <callf>\n",
       "         Unit productions consume GE codons.\n",
-      "Warning: Grammar contains unit production for production rule <signal>\n",
-      "         Unit productions consume GE codons.\n",
       "Evolution: 0% complete\n",
       "Evolution: 50% complete\n",
       "Evolution: 50% complete\n",
       "\n",
       "\n",
       "Best:\n",
-      "  Fitness:\t -22.44996813256952\n",
+      "  Fitness:\t -213.38559216120746\n",
       "  Phenotype: def fun(price_data):\n",
       "  import pandas as pd\n",
       "  import numpy as np\n",
       "  from fitness.indicators import indicators\n",
       "  from numba import njit\n",
+      "  COMMISSION = 0.003\n",
+      "  AVAILABLE_CAPITAL = 700000\n",
+      "  INVESTMENT = AVAILABLE_CAPITAL * 0.5\n",
       "  @njit\n",
       "  def merge_pnl(arr1, arr2):\n",
       "    out = np.zeros((len(arr1) + len(arr2)))\n",
@@ -68,8 +69,16 @@
       "        max = arr[i]\n",
       "    return drawdowns\n",
       "  df = price_data.copy()\n",
-      "  df['buy'] = (indicators.RSI(df=data, HistLength=10).values < 30).astype(int)\n",
-      "  df['sell'] = (indicators.RSI(df=data, HistLength=10).values > 80).astype(int)\n",
+      "  for i in range(1, 6):\n",
+      "    df[f'close_{i}'] = df['close'].shift(i)\n",
+      "    df[f'open_{i}'] = df['open'].shift(i)\n",
+      "    df[f'high_{i}'] = df['high'].shift(i)\n",
+      "    df[f'low_{i}'] = df['low'].shift(i)\n",
+      "    df[f'volume_{i}'] = df['volume'].shift(i)\n",
+      "  df.dropna(inplace=True)\n",
+      "  df.reset_index(drop=True, inplace=True)\n",
+      "  df['buy'] = ((np.sin(df['volume_3'].values.reshape(-1, 1)) <= np.sin(df['open_2'].values.reshape(-1, 1))) & (np.log(df['open_3'].values.reshape(-1, 1)) >= np.log(df['close_2'].values.reshape(-1, 1)))).astype(int)\n",
+      "  df['sell'] = ((df['open'].values.reshape(-1, 1) < 907.90) | (np.cos(df['low_2'].values.reshape(-1, 1)) < 34.608)).astype(int)\n",
       "  df['signal'] = df['buy'] + df['sell']\n",
       "  df['signal'] = df['signal'].apply(lambda x: 1 if x==1 else 0)\n",
       "  df['sell'] = df['sell'] * (-1)\n",
@@ -98,16 +107,16 @@
       "  buy_prices = df[df.index.isin(buy_idxs)]['open'].values\n",
       "  sell_prices = df[df.index.isin(sell_idxs)]['open'].values\n",
       "  if buy_idxs[0] < sell_idxs[0]:\n",
-      "    buy_pnl = np.sum(sell_prices - buy_prices)\n",
-      "    sell_pnl = np.sum(sell_prices[:-1] - buy_prices[1:])\n",
-      "    buy_arr = sell_prices - buy_prices\n",
-      "    sell_arr = sell_prices[:-1] - buy_prices[1:]\n",
+      "    buy_pnl = np.sum((sell_prices - buy_prices) * (1 - COMMISSION))\n",
+      "    sell_pnl = np.sum((sell_prices[:-1] - buy_prices[1:]) * (1 - COMMISSION))\n",
+      "    buy_arr = (sell_prices - buy_prices) * (1 - COMMISSION)\n",
+      "    sell_arr = (sell_prices[:-1] - buy_prices[1:]) * (1 - COMMISSION)\n",
       "    all_arr = merge_pnl(buy_arr, sell_arr)\n",
       "  else:\n",
-      "    sell_pnl = np.sum(sell_prices - buy_prices)\n",
-      "    buy_pnl = np.sum(sell_prices[1:] - buy_prices[:-1])\n",
-      "    sell_arr = sell_prices - buy_prices\n",
-      "    buy_arr = sell_prices[1:] - buy_prices[:-1]\n",
+      "    sell_pnl = np.sum((sell_prices - buy_prices) * (1 - COMMISSION))\n",
+      "    buy_pnl = np.sum((sell_prices[1:] - buy_prices[:-1]) * (1 - COMMISSION))\n",
+      "    sell_arr = (sell_prices - buy_prices) * (1 - COMMISSION)\n",
+      "    buy_arr = (sell_prices[1:] - buy_prices[:-1]) * (1 - COMMISSION)\n",
       "    all_arr = merge_pnl(sell_arr, buy_arr)\n",
       "  total_pnl = buy_pnl + sell_pnl\n",
       "  equity_curve_arr = np.cumsum(all_arr)\n",
@@ -118,37 +127,37 @@
       "    return 999\n",
       "  return -fitness\n",
       "fitness = fun(data)\n",
-      "  Genome: [27464, 33422, 31448, 63388, 68883, 55513, 68591, 59616, 32509, 32589, 61041, 21136, 14232]\n",
+      "  Genome: [30461, 5169, 60445, 56625, 33507, 61507, 80118, 67235, 43531, 93037, 78189, 26743, 8340, 28383, 40883, 69015, 20984, 98921, 77405, 26097, 38322, 39911, 26239, 6405, 81859, 8937, 7131, 85175, 59440, 62139, 91521, 74605, 40216, 95756, 36926, 86351, 86203, 15914, 56303, 17625, 49084, 10320, 87178, 44192, 34917, 68376, 49062, 11420, 34461, 75475, 61629, 15060, 32155, 86425, 95202, 4260, 80486, 48807, 4726, 18282, 14964]\n",
       "______\n",
       "\n",
-      "  ave_fitness : \t 142.943456029236\n",
-      "  ave_genome_length : \t 13.5\n",
-      "  ave_tree_depth : \t 5.0\n",
-      "  ave_tree_nodes : \t 14.0\n",
-      "  ave_used_codons : \t 9.0\n",
-      "  best_fitness : \t -22.44996813256952\n",
+      "  ave_fitness : \t 517.1590883284999\n",
+      "  ave_genome_length : \t 57.4\n",
+      "  ave_tree_depth : \t 8.142857142857142\n",
+      "  ave_tree_nodes : \t 44.285714285714285\n",
+      "  ave_used_codons : \t 29.0\n",
+      "  best_fitness : \t -213.38559216120746\n",
       "  gen : \t 1\n",
       "  invalids : \t 4\n",
-      "  max_genome_length : \t 19\n",
-      "  max_tree_depth : \t 5.0\n",
-      "  max_tree_nodes : \t 14.0\n",
-      "  max_used_codons : \t 9.0\n",
-      "  min_genome_length : \t 7\n",
-      "  min_tree_depth : \t 5.0\n",
-      "  min_tree_nodes : \t 14.0\n",
-      "  min_used_codons : \t 9.0\n",
+      "  max_genome_length : \t 120\n",
+      "  max_tree_depth : \t 9.0\n",
+      "  max_tree_nodes : \t 61.0\n",
+      "  max_used_codons : \t 41.0\n",
+      "  min_genome_length : \t 25\n",
+      "  min_tree_depth : \t 7.0\n",
+      "  min_tree_nodes : \t 23.0\n",
+      "  min_used_codons : \t 15.0\n",
       "  runtime_error : \t 0\n",
       "  time_adjust : \t 0\n",
-      "  time_taken : \t 9.31047797203064\n",
+      "  time_taken : \t 8.246006488800049\n",
       "  total_inds : \t 20\n",
-      "  total_time : \t 26.25530219078064\n",
+      "  total_time : \t 25.840254545211792\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "! python ponyge.py --fitness_function max_fitness --grammar_file test11.pybnf --population_size 10 --generations 1"
+    "! python ponyge.py --fitness_function max_fitness --grammar_file btc_eth_comb.pybnf --population_size 10 --generations 1"
    ]
   },
   {
