all data merged result saved

--- a/test.ipynb
+++ b/test.ipynb
@@ -3815,102 +3815,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>datetime</th>\n",
-       "      <th>6e_open</th>\n",
-       "      <th>6e_high</th>\n",
-       "      <th>6e_low</th>\n",
-       "      <th>6e_close</th>\n",
-       "      <th>6e_volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017-05-21 22:00:00</td>\n",
-       "      <td>1.12205</td>\n",
-       "      <td>1.12220</td>\n",
-       "      <td>1.12175</td>\n",
-       "      <td>1.12185</td>\n",
-       "      <td>381</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017-05-21 22:01:00</td>\n",
-       "      <td>1.12195</td>\n",
-       "      <td>1.12195</td>\n",
-       "      <td>1.12180</td>\n",
-       "      <td>1.12195</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-05-21 22:02:00</td>\n",
-       "      <td>1.12190</td>\n",
-       "      <td>1.12205</td>\n",
-       "      <td>1.12185</td>\n",
-       "      <td>1.12200</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017-05-21 22:03:00</td>\n",
-       "      <td>1.12205</td>\n",
-       "      <td>1.12205</td>\n",
-       "      <td>1.12195</td>\n",
-       "      <td>1.12195</td>\n",
-       "      <td>120</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017-05-21 22:04:00</td>\n",
-       "      <td>1.12200</td>\n",
-       "      <td>1.12205</td>\n",
-       "      <td>1.12190</td>\n",
-       "      <td>1.12195</td>\n",
-       "      <td>43</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "             datetime  6e_open  6e_high   6e_low  6e_close  6e_volume\n",
-       "0 2017-05-21 22:00:00  1.12205  1.12220  1.12175   1.12185        381\n",
-       "1 2017-05-21 22:01:00  1.12195  1.12195  1.12180   1.12195         92\n",
-       "2 2017-05-21 22:02:00  1.12190  1.12205  1.12185   1.12200         50\n",
-       "3 2017-05-21 22:03:00  1.12205  1.12205  1.12195   1.12195        120\n",
-       "4 2017-05-21 22:04:00  1.12200  1.12205  1.12190   1.12195         43"
+       "array(['6e', 'aapl', 'aav', 'amzn', 'btc', 'cl', 'coin', 'datetime',\n",
+       "       'dog', 'es', 'fet', 'gc', 'googl', 'inj', 'lin', 'meta', 'msft',\n",
+       "       'ng', 'nq', 'nvda', 'pltr', 'sui', 'tia', 'tsla', 'xrp', 'zf',\n",
+       "       'zn'], dtype='<U8')"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "np.unique([i.split('_')[0] for i in final_df.columns])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "final_df.to_csv(\"all_data_1min.csv\", index=False)"
    ]
