--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
        "4 2022-12-30 20:49:00  16538.2  16538.2  16535.8  16535.9   57985.0"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1718,7 +1718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3846,6 +3846,89 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inst_list = [\n",
+    "    '6e', 'aapl', 'aav', 'amzn', 'btc', 'cl', 'coin',\n",
+    "    'dog', 'es', 'fet', 'gc', 'googl', 'inj', 'lin', 'meta', 'msft',\n",
+    "    'ng', 'nq', 'nvda', 'pltr', 'sui', 'tia', 'tsla', 'xrp', 'zf',\n",
+    "    'zn'\n",
+    "]\n",
+    "\n",
+    "prefix_txt = '{:{:'\n",
+    "suffix_txt = ':}:}{::}'\n",
+    "it_txt = '_{i}'\n",
+    "\n",
+    "for instrument in inst_list:\n",
+    "\n",
+    "    if instrument == 'btc':\n",
+    "        continue\n",
+    "\n",
+    "    text_template = f'''{prefix_txt}df[f\"'\"{instrument}_close{it_txt}\"'\"] = df[\"'\"{instrument}_close\"'\"].shift(i){suffix_txt}\n",
+    "    {prefix_txt}df[f\"'\"{instrument}_open{it_txt}\"'\"] = df[\"'\"{instrument}_open\"'\"].shift(i){suffix_txt}\n",
+    "    {prefix_txt}df[f\"'\"{instrument}_high{it_txt}\"'\"] = df[\"'\"{instrument}_high\"'\"].shift(i){suffix_txt}\n",
+    "    {prefix_txt}df[f\"'\"{instrument}_low{it_txt}\"'\"] = df[\"'\"{instrument}_low\"'\"].shift(i){suffix_txt}\n",
+    "    {prefix_txt}df[f\"'\"{instrument}_volume{it_txt}\"'\"] = df[\"'\"{instrument}_volume\"'\"].shift(i){suffix_txt}'''\n",
+    "\n",
+    "    print(text_template)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inst_list = [\n",
+    "    '6e', 'aapl', 'aav', 'amzn', 'btc', 'cl', 'coin',\n",
+    "    'dog', 'es', 'fet', 'gc', 'googl', 'inj', 'lin', 'meta', 'msft',\n",
+    "    'ng', 'nq', 'nvda', 'pltr', 'sui', 'tia', 'tsla', 'xrp', 'zf',\n",
+    "    'zn'\n",
+    "]\n",
+    "\n",
+    "for instrument in inst_list:\n",
+    "\n",
+    "    if instrument == 'btc':\n",
+    "        continue\n",
+    "\n",
+    "    txt_temp = f'''| df[\"'\"{instrument}_close\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_open\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_high\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_low\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_volume\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_close_1\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_open_1\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_high_1\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_low_1\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_volume_1\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_close_2\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_open_2\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_high_2\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_low_2\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_volume_2\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_close_3\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_open_3\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_high_3\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_low_3\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_volume_3\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_close_4\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_open_4\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_high_4\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_low_4\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_volume_4\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_close_5\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_open_5\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_high_5\"'\"].values.reshape(-1, 1) \n",
+    "    | df[\"'\"{instrument}_low_5\"'\"].values.reshape(-1, 1)\n",
+    "    | df[\"'\"{instrument}_volume_5\"'\"].values.reshape(-1, 1)'''\n",
+    "\n",
+    "    print(txt_temp)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -3971,6 +4054,171 @@
    ],
    "source": [
     "re.findall(r\"df\\[\\'sell\\'\\] = \\((.*)\\)\\.astype\\(int\\)\", text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "@njit(cache=True)\n",
+    "def get_pnl(\n",
+    "    trade_close_prices,\n",
+    "    trade_open_prices,\n",
+    "    commission=0.015,\n",
+    "    slippage=0.05,\n",
+    "    init_inv=20000,\n",
+    "    trade_size=0.1,\n",
+    "    is_buy=1\n",
+    "):\n",
+    "\n",
+    "    pnl_list = np.zeros(len(trade_close_prices))\n",
+    "\n",
+    "    for i in range(len(trade_close_prices)):\n",
+    "        \n",
+    "        temp_n_assets = int(init_inv * trade_size / trade_open_prices[i])\n",
+    "        if is_buy == 1:\n",
+    "            temp_pnl = temp_n_assets * (trade_close_prices[i] - trade_open_prices[i] * (1 + slippage))\n",
+    "        else:\n",
+    "            temp_pnl = -temp_n_assets * (trade_close_prices[i] - trade_open_prices[i] * (1 - slippage))\n",
+    "        temp_pnl = temp_pnl * (1 - commission)\n",
+    "        init_inv += temp_pnl\n",
+    "\n",
+    "        pnl_list[i] = temp_pnl\n",
+    "\n",
+    "    return pnl_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fun(price_data):\n",
+    "  import pandas as pd\n",
+    "  import numpy as np\n",
+    "  # from fitness.indicators import indicators\n",
+    "  from numba import njit\n",
+    "  COMMISSION = 0.015\n",
+    "  SLIPPAGE = 0.00005\n",
+    "  AVAILABLE_CAPITAL = 700000\n",
+    "  TRADE_SIZE = 0.5\n",
+    "  @njit\n",
+    "  def merge_pnl(arr1, arr2):\n",
+    "    out = np.zeros((len(arr1) + len(arr2)))\n",
+    "    idx = 1\n",
+    "    for i in range(len(arr1) + len(arr2)):\n",
+    "      if i % 2 == 0:\n",
+    "        out[i] = arr1[int(i/2)]\n",
+    "      else:\n",
+    "        out[i] = arr2[i-idx]\n",
+    "      idx += 1\n",
+    "    return out\n",
+    "  @njit\n",
+    "  def get_drawdowns(arr):\n",
+    "    drawdowns = np.zeros((len(arr)))\n",
+    "    max = arr[0]\n",
+    "    for i in range(1, len(drawdowns)-1):\n",
+    "      if arr[i-1] > arr[i] and arr[i] < arr[i+1]:\n",
+    "        min = arr[i]\n",
+    "        drawdowns[i] = max - min\n",
+    "      elif arr[i-1] < arr[i] and arr[i] > arr[i+1]:\n",
+    "        max = arr[i]\n",
+    "    return drawdowns\n",
+    "  @njit\n",
+    "  def get_pnl(trade_close_prices, trade_open_prices, commission, slippage, init_inv, trade_size, is_buy):\n",
+    "    pnl_list = np.zeros(len(trade_close_prices))\n",
+    "    for i in range(len(trade_close_prices)):\n",
+    "      temp_n_assets = int(init_inv * trade_size / trade_open_prices[i])\n",
+    "      if is_buy == 1:\n",
+    "        temp_pnl = temp_n_assets * (trade_close_prices[i] - trade_open_prices[i] * (1 + slippage))\n",
+    "      else:\n",
+    "        temp_pnl = -temp_n_assets * (trade_close_prices[i] - trade_open_prices[i] * (1 - slippage))\n",
+    "      temp_pnl = temp_pnl * (1 - commission)\n",
+    "      init_inv += temp_pnl\n",
+    "      pnl_list[i] = temp_pnl\n",
+    "    return pnl_list\n",
+    "  df = price_data.copy()\n",
+    "  for i in range(1, 6):\n",
+    "    df[f'close_{i}'] = df['close'].shift(i)\n",
+    "    df[f'open_{i}'] = df['open'].shift(i)\n",
+    "    df[f'high_{i}'] = df['high'].shift(i)\n",
+    "    df[f'low_{i}'] = df['low'].shift(i)\n",
+    "    df[f'volume_{i}'] = df['volume'].shift(i)\n",
+    "  df.dropna(inplace=True)\n",
+    "  df.reset_index(drop=True, inplace=True)\n",
+    "  df['buy'] = (RSI(df=df, HistLength=10).values < 20).astype(int)\n",
+    "  df['sell'] = (RSI(df=df, HistLength=10).values > 80).astype(int)\n",
+    "  df['signal'] = df['buy'] + df['sell']\n",
+    "  df['signal'] = df['signal'].apply(lambda x: 1 if x==1 else 0)\n",
+    "  df['sell'] = df['sell'] * (-1)\n",
+    "  df['signal'] = df['signal'] * df['sell']\n",
+    "  df['signal'] = df['signal'] + df['buy']\n",
+    "  df.drop(columns=['buy', 'sell'], inplace=True)\n",
+    "  buy_idxs = []\n",
+    "  sell_idxs = []\n",
+    "  is_buy = 0\n",
+    "  is_sell = 0\n",
+    "  for i, row in enumerate(df.itertuples()):\n",
+    "    if row.signal == 1 and is_buy == 0:\n",
+    "      buy_idxs.append(i+1)\n",
+    "      is_buy = 1\n",
+    "      is_sell = 0\n",
+    "    elif row.signal == -1 and is_sell == 0:\n",
+    "      sell_idxs.append(i+1)\n",
+    "      is_sell = 1\n",
+    "      is_buy = 0\n",
+    "  if len(buy_idxs) > len(sell_idxs):\n",
+    "    buy_idxs = buy_idxs[:-(len(buy_idxs) - len(sell_idxs))]\n",
+    "  elif len(buy_idxs) < len(sell_idxs):\n",
+    "    sell_idxs = sell_idxs[:-(len(sell_idxs) - len(buy_idxs))]\n",
+    "  if len(buy_idxs) == 0 or len(sell_idxs) == 0:\n",
+    "    return 999\n",
+    "  buy_prices = df[df.index.isin(buy_idxs)]['open'].values\n",
+    "  sell_prices = df[df.index.isin(sell_idxs)]['open'].values\n",
+    "  if buy_idxs[0] < sell_idxs[0]:\n",
+    "    buy_arr = get_pnl(sell_prices, buy_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
+    "    buy_pnl = np.sum(buy_arr)\n",
+    "    sell_arr = get_pnl(buy_prices[1:], sell_prices[:-1], COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 0)\n",
+    "    sell_pnl = np.sum(sell_arr)\n",
+    "    all_arr = merge_pnl(buy_arr, sell_arr)\n",
+    "  else:\n",
+    "    sell_arr = get_pnl(buy_prices, sell_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 0)\n",
+    "    sell_pnl = np.sum(sell_arr)\n",
+    "    buy_arr = get_pnl(sell_prices[1:], buy_prices[:-1], COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
+    "    buy_pnl = np.sum(buy_arr)\n",
+    "    all_arr = merge_pnl(sell_arr, buy_arr)\n",
+    "  total_pnl = buy_pnl + sell_pnl\n",
+    "  equity_curve_arr = np.cumsum(all_arr)\n",
+    "  drawdowns = get_drawdowns(equity_curve_arr)\n",
+    "  avg_drawdown = np.sum(drawdowns[drawdowns!=0]) / len(drawdowns[drawdowns!=0])\n",
+    "  fitness = total_pnl / avg_drawdown\n",
+    "  if np.isnan(fitness):\n",
+    "    return -999, avg_drawdown, total_pnl, drawdowns, all_arr\n",
+    "  return -fitness, avg_drawdown, total_pnl\n",
+    "# fitness = fun(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(-21.76345021703719, 624.2359576924164, 13585.528188923437)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fun(df)"
    ]
   },
   {
