not important change

--- a/run.ipynb
+++ b/run.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Start:\t 2024-10-01 22:49:53.322243 \n",
+      "Start:\t 2024-10-03 09:58:15.724003 \n",
       "\n",
       "Warning: Grammar contains unit production for production rule <fc>\n",
       "         Unit productions consume GE codons.\n",
@@ -37,15 +37,16 @@
       "\n",
       "\n",
       "Best:\n",
-      "  Fitness:\t -213.38559216120746\n",
+      "  Fitness:\t 999\n",
       "  Phenotype: def fun(price_data):\n",
       "  import pandas as pd\n",
       "  import numpy as np\n",
       "  from fitness.indicators import indicators\n",
       "  from numba import njit\n",
-      "  COMMISSION = 0.003\n",
+      "  COMMISSION = 0.015\n",
+      "  SLIPPAGE = 0.05\n",
       "  AVAILABLE_CAPITAL = 700000\n",
-      "  INVESTMENT = AVAILABLE_CAPITAL * 0.5\n",
+      "  TRADE_SIZE = 0.5\n",
       "  @njit\n",
       "  def merge_pnl(arr1, arr2):\n",
       "    out = np.zeros((len(arr1) + len(arr2)))\n",
@@ -68,6 +69,19 @@
       "      elif arr[i-1] < arr[i] and arr[i] > arr[i+1]:\n",
       "        max = arr[i]\n",
       "    return drawdowns\n",
+      "  @njit\n",
+      "  def get_pnl(trade_close_prices, trade_open_prices, commission, slippage, init_inv, trade_size, is_buy):\n",
+      "    pnl_list = np.zeros(len(trade_close_prices))\n",
+      "    for i in range(len(trade_close_prices)):\n",
+      "      temp_n_assets = int(init_inv * trade_size / trade_open_prices[i])\n",
+      "      if is_buy == 1:\n",
+      "        temp_pnl = temp_n_assets * (trade_close_prices[i] - trade_open_prices[i] * (1 + slippage))\n",
+      "      else:\n",
+      "        temp_pnl = -temp_n_assets * (trade_close_prices[i] - trade_open_prices[i] * (1 - slippage))\n",
+      "      temp_pnl = temp_pnl * (1 - commission)\n",
+      "      init_inv += temp_pnl\n",
+      "      pnl_list[i] = temp_pnl\n",
+      "    return pnl_list\n",
       "  df = price_data.copy()\n",
       "  for i in range(1, 6):\n",
       "    df[f'close_{i}'] = df['close'].shift(i)\n",
@@ -77,8 +91,8 @@
       "    df[f'volume_{i}'] = df['volume'].shift(i)\n",
       "  df.dropna(inplace=True)\n",
       "  df.reset_index(drop=True, inplace=True)\n",
-      "  df['buy'] = ((np.sin(df['volume_3'].values.reshape(-1, 1)) <= np.sin(df['open_2'].values.reshape(-1, 1))) & (np.log(df['open_3'].values.reshape(-1, 1)) >= np.log(df['close_2'].values.reshape(-1, 1)))).astype(int)\n",
-      "  df['sell'] = ((df['open'].values.reshape(-1, 1) < 907.90) | (np.cos(df['low_2'].values.reshape(-1, 1)) < 34.608)).astype(int)\n",
+      "  df['buy'] = ((df['high_2'].values.reshape(-1, 1) >= df['high_3'].values.reshape(-1, 1)) & (df['close_2'].values.reshape(-1, 1) < df['low_2'].values.reshape(-1, 1))).astype(int)\n",
+      "  df['sell'] = ((df['volume_3'].values.reshape(-1, 1) != df['close_2'].values.reshape(-1, 1)) | (df['low'].values.reshape(-1, 1) > df['close_4'].values.reshape(-1, 1))).astype(int)\n",
       "  df['signal'] = df['buy'] + df['sell']\n",
       "  df['signal'] = df['signal'].apply(lambda x: 1 if x==1 else 0)\n",
       "  df['sell'] = df['sell'] * (-1)\n",
@@ -107,16 +121,16 @@
       "  buy_prices = df[df.index.isin(buy_idxs)]['open'].values\n",
       "  sell_prices = df[df.index.isin(sell_idxs)]['open'].values\n",
       "  if buy_idxs[0] < sell_idxs[0]:\n",
-      "    buy_pnl = np.sum((sell_prices - buy_prices) * (1 - COMMISSION))\n",
-      "    sell_pnl = np.sum((sell_prices[:-1] - buy_prices[1:]) * (1 - COMMISSION))\n",
-      "    buy_arr = (sell_prices - buy_prices) * (1 - COMMISSION)\n",
-      "    sell_arr = (sell_prices[:-1] - buy_prices[1:]) * (1 - COMMISSION)\n",
+      "    buy_arr = get_pnl(sell_prices, buy_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
+      "    buy_pnl = np.sum(buy_arr)\n",
+      "    sell_arr = get_pnl(buy_prices[1:], sell_prices[:-1], COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 0)\n",
+      "    sell_pnl = np.sum(sell_arr)\n",
       "    all_arr = merge_pnl(buy_arr, sell_arr)\n",
       "  else:\n",
-      "    sell_pnl = np.sum((sell_prices - buy_prices) * (1 - COMMISSION))\n",
-      "    buy_pnl = np.sum((sell_prices[1:] - buy_prices[:-1]) * (1 - COMMISSION))\n",
-      "    sell_arr = (sell_prices - buy_prices) * (1 - COMMISSION)\n",
-      "    buy_arr = (sell_prices[1:] - buy_prices[:-1]) * (1 - COMMISSION)\n",
+      "    sell_arr = get_pnl(buy_prices, sell_prices, COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 0)\n",
+      "    sell_pnl = np.sum(sell_arr)\n",
+      "    buy_arr = get_pnl(sell_prices[1:], buy_prices[:-1], COMMISSION, SLIPPAGE, AVAILABLE_CAPITAL, TRADE_SIZE, 1)\n",
+      "    buy_pnl = np.sum(buy_arr)\n",
       "    all_arr = merge_pnl(sell_arr, buy_arr)\n",
       "  total_pnl = buy_pnl + sell_pnl\n",
       "  equity_curve_arr = np.cumsum(all_arr)\n",
@@ -127,37 +141,37 @@
       "    return 999\n",
       "  return -fitness\n",
       "fitness = fun(data)\n",
-      "  Genome: [30461, 5169, 60445, 56625, 33507, 61507, 80118, 67235, 43531, 93037, 78189, 26743, 8340, 28383, 40883, 69015, 20984, 98921, 77405, 26097, 38322, 39911, 26239, 6405, 81859, 8937, 7131, 85175, 59440, 62139, 91521, 74605, 40216, 95756, 36926, 86351, 86203, 15914, 56303, 17625, 49084, 10320, 87178, 44192, 34917, 68376, 49062, 11420, 34461, 75475, 61629, 15060, 32155, 86425, 95202, 4260, 80486, 48807, 4726, 18282, 14964]\n",
+      "  Genome: [38797, 90441, 47674, 73378, 60793, 44138, 80210, 64649, 57257, 56073, 48284, 70428, 74029, 12245, 41267, 62023, 59508, 62230, 85584, 5781, 93250, 60762, 75470, 60270, 88805, 41779, 5089, 23889, 28007, 84917, 74076, 31190, 5837, 8719]\n",
       "______\n",
       "\n",
-      "  ave_fitness : \t 517.1590883284999\n",
-      "  ave_genome_length : \t 57.4\n",
-      "  ave_tree_depth : \t 8.142857142857142\n",
-      "  ave_tree_nodes : \t 44.285714285714285\n",
-      "  ave_used_codons : \t 29.0\n",
-      "  best_fitness : \t -213.38559216120746\n",
+      "  ave_fitness : \t 999.0\n",
+      "  ave_genome_length : \t 49.85\n",
+      "  ave_tree_depth : \t 7.5\n",
+      "  ave_tree_nodes : \t 41.125\n",
+      "  ave_used_codons : \t 26.125\n",
+      "  best_fitness : \t 999\n",
       "  gen : \t 1\n",
       "  invalids : \t 4\n",
-      "  max_genome_length : \t 120\n",
-      "  max_tree_depth : \t 9.0\n",
-      "  max_tree_nodes : \t 61.0\n",
-      "  max_used_codons : \t 41.0\n",
-      "  min_genome_length : \t 25\n",
-      "  min_tree_depth : \t 7.0\n",
-      "  min_tree_nodes : \t 23.0\n",
-      "  min_used_codons : \t 15.0\n",
-      "  runtime_error : \t 0\n",
+      "  max_genome_length : \t 177\n",
+      "  max_tree_depth : \t 8.0\n",
+      "  max_tree_nodes : \t 53.0\n",
+      "  max_used_codons : \t 34.0\n",
+      "  min_genome_length : \t 15\n",
+      "  min_tree_depth : \t 6.0\n",
+      "  min_tree_nodes : \t 26.0\n",
+      "  min_used_codons : \t 17.0\n",
+      "  runtime_error : \t 19\n",
       "  time_adjust : \t 0\n",
-      "  time_taken : \t 8.246006488800049\n",
-      "  total_inds : \t 20\n",
-      "  total_time : \t 25.840254545211792\n",
+      "  time_taken : \t 82.5571973323822\n",
+      "  total_inds : \t 40\n",
+      "  total_time : \t 141.68285465240479\n",
       "\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "! python ponyge.py --fitness_function max_fitness --grammar_file btc_eth_comb.pybnf --population_size 10 --generations 1"
+    "! python ponyge.py --fitness_function max_fitness --grammar_file btc_ohlcv_lags.pybnf --population_size 20 --generations 1"
    ]
   },
   {
