limited testing corrected

--- a/test.ipynb
+++ b/test.ipynb
@@ -6766,8 +6766,8 @@
     ")\n",
     "\n",
     "temp_signal_df = pd.DataFrame({'buy': [buy_signal_txt], 'sell': [sell_signal_txt]})\n",
-    "coret_win_pc_df = pd.concat([temp_signal_df, perf_df], axis=1)\n",
-    "coret_win_pc_df"
+    "perf_df = pd.concat([temp_signal_df, perf_df], axis=1)\n",
+    "perf_df"
    ]
   },
   {
